discussion/kv_engine/181596/181596_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

Don't submit disabled events to the audit daemon

Change-Id: I1eb473c4cc6cfa27597cd59b872e39dc06bcde9e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-20 20:47:25.000000000
Message: 
Uploaded patch set 11: Patch Set 10 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-20 21:21:48.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21360/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26: error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
    if (audit_eventid != NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON) {
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21360/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21360/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50580/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/mcaudit.cc(320): error C2065: "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50580/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42435/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/eventdescriptor.h:72:10:
error: no type named "atomic_bool" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42435/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31811/ : FAILURE

Compile error at [2022-10-20T21:21:22.991Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31811/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11091/ : FAILURE

Compile error at [2022-10-20T21:14:35.970Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11091/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23791/ : FAILURE

Compile error at [2022-10-20T21:18:23.611Z] ../kv_engine/auditd/src/event.cc:105:24:
error: ?AuditDescriptorManager? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23791/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23388/ : FAILURE

Compile error at [2022-10-20T21:19:46.026Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/mcaudit.cc:320:26:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23388/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24626/ : FAILURE

Compile error at [2022-10-20T21:13:07.306Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24626/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11187/ : FAILURE

Compile error at [2022-10-20T20:58:20.564Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/mcaudit.cc:320:26:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11187/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22809/ : FAILURE

Compile error at [2022-10-20T20:59:54.874Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22809/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20619/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
